<resources>
    <string name="app_name">Bai-lingual</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="signout">Sign Out</string>
    <string name="signin">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="main_menu">Main Menu</string>
    <string name="img_to_text">Image to Text</string>
    <string name="translate">Translate</string>
    <string name="view_bookmark">View History</string>
    <string name="matching_game">Matching Game</string>
    <string name="load">Load an image</string>
    <string name="camera">Take a picture</string>
    <string name="source_lang">English</string>
    <string name="hint">Source Text</string>
    <string name="translated_lang">Chinese</string>
    <string name="translation">Translation</string>
    <string name="please_start">Please select a feature to start with</string>
    <string name="what_is">WHAT IS THIS?</string>
    <string name="matching_game_loading_error">Sorry, a network issue happened or no data is available right now. Please try again!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congrats">Congratulations! \n You have finished the game!</string>

</resources>
