<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/source_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/source_lang"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/source_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/source_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint"
        android:minHeight="150dp"
        app:layout_constraintTop_toBottomOf="@+id/source_lang"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:background="@drawable/button_background_yellow"
        android:id="@+id/translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/translate"
        app:layout_constraintTop_toBottomOf="@+id/source_text"
        tools:layout_editor_absoluteX="20dp"
        style="@style/button_style"/>

    <TextView
        android:id="@+id/translated_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/translated_lang"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translate" />

    <TextView
        android:id="@+id/translated_text"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textbar"
        android:text="@string/translation"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translated_lang" />


</androidx.constraintlayout.widget.ConstraintLayout>