<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainMenuLoggedIn">


    <Button
        android:background="@color/buttonRed"
        android:id="@+id/img_to_text"
        style="@style/button_style"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_image_black_24dp"
        android:text="@string/img_to_text"
        app:layout_constraintBottom_toTopOf="@+id/trans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan_inv" />

    <Button
        android:background="@color/buttonYellow"
        android:id="@+id/trans"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        app:layout_constraintBottom_toTopOf="@+id/view_bmks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_to_text"
        android:drawableStart="@drawable/ic_translate_black_24dp"
        style="@style/button_style"/>

    <Button
        android:background="@color/buttonGreen"
        android:id="@+id/view_bmks"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/view_bookmark"
        app:layout_constraintBottom_toTopOf="@+id/matching"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trans"
        android:drawableStart="@drawable/ic_history_black_24dp"
        style="@style/button_style"/>

    <Button
        android:background="@color/buttonBlue"
        android:id="@+id/matching"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/matching_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_bmks"
        android:drawableStart="@drawable/ic_videogame_asset_black_24dp"
        style="@style/button_style"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/slogan_inv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan_inv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/please_start"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/img_to_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>